--- a/style.css
+++ b/style.css
@@ -3,10 +3,7 @@
   padding: 0px;
 }
 
-body {
-  text-align: center;
-}
-
+/* header */
 header {
   background-color: lightblue;
   border: 1px solid black;
@@ -20,18 +17,61 @@ h1 {
   text-align: center;
 }
 
+/* section paleta de cores */
+#container-palette-color {
+  display: flex;
+  justify-content: center;
+}
+
+.color {
+  border: 1px solid black;
+  border-radius: 50%;
+  height: 40px;
+  margin-top: 10px;
+  margin-left:10px;
+  margin-right: 10px;
+  width: 40px;
+}
+
+/* sectio input number */
+.input-number {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px;
+}
+
 label {
   margin: 2px;
   font-size: larger;
 }
 
-input {
-  margin: 5px;
-}
-
 span {
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
+  margin: 5px;
+}
+
+#height-div,
+#width-div {
+  margin: 2px 10px;
+}
+
+/* section escolha cor */
+#contairner-choose-color {
+  text-align: center;
+}
+
+#color-input {
+  border-radius: 0%;
+  height: 25px;
+  width: 40px;
+}
+
+/* section botões */
+#container-button {
+  text-align: center;
   margin: 5px;
 }
 
@@ -41,16 +81,12 @@ button {
   padding: 8px;
 }
 
-.btn-clean {
+#btn-clean {
   background-color: lightcoral;
 }
 
-.btn-start-playing {
+#btn-start-playing {
   background-color: lightgreen;
-}
-
-.input-number {
-  margin: 10px;
 }
 
 .grid-div {
@@ -62,4 +98,15 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.185);
   width: 20px;
   height: 20px;
+}
+
+@media (max-width: 540px) {
+  #height-div {
+    display: none;
+  }
+  @media(max-width: 430px) {
+    .input-number {
+      display: none;
+    }
+  }
 }
